# FFMpegPro

./: .gitignore  AudioDecoder.cpp  AudioDecoder.h  AudioEncoder.cpp  AudioEncoder.h  AudioResample.cpp  CMakeLists.txt  ExceptionRec.txt  FFMpegSimplePlayer.cpp  FFMpegSimplePlayer.h  MediaDeMuxerCore.cpp  MediaDeMuxerCore.h  Mp3ToAAC.cpp  README.md  VideoDecoder.cpp  VideoDecoder.h  VideoEncoder.cpp  VideoEncoder.h  main.cpp
muxer/: AudioHandle.cpp  CMakeLists.txt  ComplexMuxerCore.cpp  VideoHandle.cpp
